demo/demo/src/main/java/com/example/demo/errors/client/RoomNotFoundAdvice.java
package com.example.demo.errors.client;

import com.example.demo.errors.server.RoomNotFoundException;
import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.ResponseBody;
import org.springframework.web.bind.annotation.ResponseStatus;

@ControllerAdvice
class RoomNotFoundAdvice {

    @ResponseBody
    @ExceptionHandler(RoomNotFoundException.class)
    @ResponseStatus(HttpStatus.NOT_FOUND)
    String roomNotFoundHandler(RoomNotFoundException ex) {
        return "Error " + HttpStatus.NOT_FOUND + ": " + ex.getMessage();
    }
}
